--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -23,8 +23,8 @@
 </div> -->
 <div class="container">
   <div class="row">
-  					<div class="col-xs-12 col-sm-12 col-md-5 col-lg-4">
-  						<div class="well no-padding">
+  					<div class="col-md-offset-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+  						<div class="well  login-box no-padding">
                 <form id="login-form" class="smart-form client-form" name="form" ng-submit="vm.login(form)" novalidate>
   								<header>
   									Sign In
