--- a/client/app/addcompany/addcompany.html
+++ b/client/app/addcompany/addcompany.html
@@ -160,25 +160,25 @@
 							<fieldset>
 							<section>
 									<label for="address" class="input">
-										<input name="address.address" ng-model="company.address.address" placeholder="Address" type="text">
+										<input name="address_address" ng-model="company.address_address" placeholder="Address" type="text">
 									</label>
 								</section>
 								<div class="row">
 									<section class="col col-5">
 										<label class="input">
-											<input name="address.city" ng-model="company.address.city" placeholder="City" type="text">
+											<input name="address_city" ng-model="company.address_city" placeholder="City" type="text">
 										</label>
 									</section>
 
 									<section class="col col-4">
 										<label class="input">
-											<input name="address.state" ng-model="company.address.state" placeholder="State" type="text">
+											<input name="address_state" ng-model="company.address_state" placeholder="State" type="text">
 										</label>
 									</section>
 
 									<section class="col col-3">
 										<label class="input">
-											<inputname="address.zipcode" ng-model="company.address.zipcode" placeholder="Zip code" type="text">
+											<inputname="address_zipcode" ng-model="company.address_zipcode" placeholder="Zip code" type="text">
 										</label>
 									</section>
 								</div>
@@ -209,12 +209,12 @@
 								<div class="row">
 									<section class="col col-6">
 										<label class="input">
-											<input name="fname" ng-model="company.contact.fname" placeholder="First Name " type="text" required>
+											<input name="fname" ng-model="company.contact_fname" placeholder="First Name " type="text" required>
 										</label>
 									</section>
 									<section class="col col-6">
 										<label class="input">
-											<input name="lname" ng-model="company.contact.lname" placeholder="Last Name " type="text" required>
+											<input name="lname" ng-model="company.contact_lname" placeholder="Last Name " type="text" required>
 										</label>
 									</section>
 								</div>
@@ -222,17 +222,17 @@
 								<div class="row">
 									<section class="col col-6">
 										<label class="input">
-											<input name="title" ng-model="company.contact.title" placeholder="Title" type="text">
+											<input name="title" ng-model="company.contact_title" placeholder="Title" type="text">
 										</label>
 									</section>
 									<section class="col col-6">
 										<label class="input">
-											<input name="email" ng-model="company.contact.email" placeholder="E-mail" data-mask="(999) 999-9999" type="email">
+											<input name="email" ng-model="company.contact_email" placeholder="E-mail" data-mask="(999) 999-9999" type="email">
 										</label>
 									</section>
 									<section class="col col-6">
 										<label class="input">
-											<input name="phone" ng-model="company.contact.phone" placeholder="Phone" data-mask="(999) 999-9999" type="tel">
+											<input name="phone" ng-model="company.contact_phone" placeholder="Phone" data-mask="(999) 999-9999" type="tel">
 										</label>
 									</section>
 								</div>
