login and signup

--- a/client/app/addcompany/addcompany.html
+++ b/client/app/addcompany/addcompany.html
@@ -1,3 +1,4 @@
+<div class="" id="main">
 
 <!-- RIBBON -->
 		<div id="ribbon" class="breadcrumb-header">
@@ -271,3 +272,4 @@
 
 	</div>
     </div>
+	</div>
