--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,47 +1,62 @@
+<div class="" id="extr-page">
+
+  <header id="header" class="animated fadeInDown ng-scope">
+
+    <div id="logo-group">
+      <span id="logo"> <img src="assets/images/logo.png" alt="SmartAdmin"> </span>
+    </div>
+
+    <span id="extr-page-header-space"> <span class="hidden-mobile hiddex-xs">Need an account?</span> <a href="/#/signup" class="btn btn-danger">Create account</a> </span>
+
+  </header>
+<div class="" id="main">
 <div class="container">
   <div class="row">
-    <div class="col-sm-8 text-left">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
+  					<div class="col-md-offset-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+  						<div class="well  login-box no-padding">
+                <form id="login-form" class="smart-form client-form" name="form" ng-submit="vm.login(form)" novalidate>
+  								<header>
+  									Sign In
+  								</header>
 
-        <div class="form-group">
-          <label>Email</label>
+  								<fieldset>
 
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
+  									<section>
+  										<label class="label">E-mail</label>
+  										<label class="input"> <i class="icon-append fa fa-user"></i>
+  											<input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
+  											<b class="tooltip tooltip-top-right"><i class="fa fa-user txt-color-teal"></i> Please enter email address/username</b></label>
+  									</section>
+
+  									<section>
+  										<label class="label">Password</label>
+  										<label class="input"> <i class="icon-append fa fa-lock"></i>
+  											<input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
+  											<b class="tooltip tooltip-top-right"><i class="fa fa-lock txt-color-teal"></i> Enter your password</b> </label>
+  									</section>
+                    <div class="form-group has-error">
+                      <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
+                         Please enter your email and password.
+                      </p>
+                      <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
+                         Please enter a valid email.
+                      </p>
+
+                      <p class="help-block">{{ vm.errors.other }}</p>
+                    </div>
+  								</fieldset>
+  								<footer>
+  									<button type="submit" class="btn btn-primary">
+  										Sign in
+  									</button>
+  								</footer>
+  							</form>
+
+  						</div>
+
+  					</div>
+  				</div>
         </div>
+      </div>
 
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ vm.errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
-          </a>
-        </div>
-
-      </form>
-    </div>
-  </div>
-  <hr>
 </div>
