--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,26 +1,15 @@
-<!-- <header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
+<div class="" id="extr-page">
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+  <header id="header" class="animated fadeInDown ng-scope">
+
+    <div id="logo-group">
+      <span id="logo"> <img src="assets/images/logo.png" alt="SmartAdmin"> </span>
     </div>
-  </div>
-</div> -->
-<!-- <div class="col-sm-6">
-<h1>Login</h1>
-<p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-<p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
-</div> -->
+
+    <span id="extr-page-header-space"> <span class="hidden-mobile hiddex-xs">Need an account?</span> <a href="/#/signup" class="btn btn-danger">Create account</a> </span>
+
+  </header>
+<div class="" id="main">
 <div class="container">
   <div class="row">
   					<div class="col-md-offset-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -67,45 +56,7 @@
 
   					</div>
   				</div>
-
-  <!-- <div class="row">
-    <div class="col-sm-offset-4 col-sm-4">
-      <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
-
-        <div class="form-group">
-          <label>Email</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
         </div>
-
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ vm.errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
-          </a>
-        </div>
-
-      </form>
-    </div>
-  </div> -->
+      </div>
 
 </div>
