--- a/client/app/addcompany/addcompany.html
+++ b/client/app/addcompany/addcompany.html
@@ -146,13 +146,14 @@
 											<input name="keyTechnologies" ng-model="company.keyTechnologies" placeholder="Key technology" type="text">
 										</label>
 									</section>
+									<div class="row">
 									<section class="col col-6">
 										<label class="input"> <i class="icon-prepend fa fa-phone"></i>
-											<input name="owner" ng-model="company.owner" placeholder="Owner" data-mask="(999) 999-9999" type="tel">
-										</label>
-									</section>
-										<section class="col col-6">
+											<input name="owner" ng-model="company.ocompanies" placeholder="owner" type="text">
+										</div>
+										</section>
 											<div class="row">
+												<section class="col col-6">
 												<label class="label col col-4">Hot</label>
     <input type="checkbox" name="isHot" ng-model="company.isHot" value="on" class="validation-added">
     Yes</label></section>
