--- a/client/app/companies/companies.html
+++ b/client/app/companies/companies.html
@@ -1,25 +1,165 @@
 <div class="" id="main">
+  <!-- RIBBON -->
+  		<div id="ribbon" class="breadcrumb-header">
 
+  			<span class="ribbon-button-alignment">
+  				<span id="refresh" class="btn btn-ribbon" data-action="resetWidgets" data-title="refresh" rel="tooltip" data-placement="bottom" data-original-title="<i class='text-warning fa fa-warning'></i> Warning! This will reset all your widget settings." data-html="true">
+  					<i class="fa fa-refresh"></i>
+  				</span>
+  			</span>
+
+  			<!-- breadcrumb -->
+  			<ol class="breadcrumb">
+  				<li>Home</li><li>Miscellaneous</li><li>Blank Page</li>
+  			</ol>
+  			<!-- end breadcrumb -->
+
+  		</div>
+  		<!-- END RIBBON -->
 <div id="content">
-    <!-- widget grid -->
-    <section widget-grid id="widget-grid">
+  <div class="jarviswidget jarviswidget-color-darken jarviswidget-sortable" id="wid-id-0" data-widget-editbutton="false" role="widget">
+                <!-- widget options:
+                usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
 
+                data-widget-colorbutton="false"
+                data-widget-editbutton="false"
+                data-widget-togglebutton="false"
+                data-widget-deletebutton="false"
+                data-widget-fullscreenbutton="false"
+                data-widget-custombutton="false"
+                data-widget-collapsed="true"
+                data-widget-sortable="false"
 
-        <div class="row">
-            <article class="col-sm-12">
+                -->
+                <header role="heading">
+                  <span class="widget-icon"> <i class="fa fa-table"></i> </span>
+                  <h2>Companies</h2>
 
-                <jq-grid grid-data="gridData"></jq-grid>
+                <span class="jarviswidget-loader"><i class="fa fa-refresh fa-spin"></i></span></header>
 
-                <br>
-                <a ng-click="getSelection()">Get Selected id's</a>
-                <br>
-                <a ng-click="selectRow(13)">Select(Unselect) row 13</a>
+                <!-- widget div-->
+                <div role="content">
 
-            </article>
+                  <!-- widget edit box -->
+                  <div class="jarviswidget-editbox">
+                    <!-- This area used as dropdown edit box -->
 
+                  </div>
+                  <!-- end widget edit box -->
 
-        </div>
+                  <!-- widget content -->
+                  <div class="widget-body no-padding">
 
-    </section>
+                    <div id="dt_basic_wrapper" class="dataTables_wrapper form-inline no-footer">
+                      <table st-safe-src="rowCollection" st-table="displayCollection" class="table dataTable no-footer">
+                        <tr>
+                          <td colspan="9">
+                            <div class="dt-toolbar">
+                              <div class="col-xs-12 col-sm-6">
+                                <div id="dt_basic_filter" class="dataTables_filter">
+                                  <label><span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-search"></i></span>
+                                    <input st-search placeholder="global search" class="form-control" type="search"/>
+                                  </label>
+                                </div>
+                              </div>
+                              <div class="col-sm-6 col-xs-12 hidden-xs">
+                                <div class="dataTables_length" id="dt_basic_length">
+                                  <label>
+                                    <select ng-model="itemsByPage" class="form-control">
+                                      <option value="0">0</option>
+                                      <option value="10">10</option>
+                                      <option value="25">25</option>
+                                      <option value="50">50</option>
+                                      <option value="100">100</option>
+                                    </select>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+
+                          </td>
+                        </tr>
+                      </table>
+                      <table id="dt_basic" class="table table-striped table-bordered table-hover dataTable no-footer" st-safe-src="rowCollection" st-table="displayCollection" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th st-sort="name">Company name</th>
+                                <th st-sort="address_address">Location</th>
+                                <th st-sort="phone1">Phone</th>
+                                <th st-sort="owner">Owner</th>
+                                <th st-sort="contact_fname">Firstname</th>
+                                <th st-sort="contact_lname">Lastname</th>
+                                <th st-sort="contact_title">Title</th>
+                                <th st-sort="contact_phone">Contact Phone</th>
+                                <th>
+                                  Action
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <input st-search="name" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="address_address" placeholder="search address" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="phone1" placeholder="search phone" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="owner" placeholder="search owner" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="contact_fname" placeholder="search firstname" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="contact_lname" placeholder="search lastname" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="contact_title" placeholder="search title" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+                                  <input st-search="contact_phone" placeholder="search contact phone" class="input-sm form-control" type="search"/>
+                                </th>
+                                <th>
+
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="row in displayCollection">
+                                <td>{{row.name}}</td>
+                                <td>{{row.address_address}}</td>
+                                <td>{{row.phone1}}</td>
+                                <td>{{row.owner}}</td>
+                                <td>{{row.contact_fname}}</td>
+                                <td>{{row.contact_lname}}</td>
+                                <td>{{row.contact_title}}</td>
+                                <td>{{row.contact_phone}}</td>
+                                <td>
+                                  <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+                                    <i class="glyphicon glyphicon-remove-circle">
+                                    </i>
+                                  </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                          <tr>
+                            <td colspan="5" class="text-center">
+                              <div st-pagination="" st-items-by-page="itemsByPage" st-displayed-pages="7"></div>
+                            </td>
+                          </tr>
+                        </tfoot>
+
+                    </table>
+
+                  </div>
+                  <!-- end widget content -->
+
+                </div>
+                <!-- end widget div -->
+
+              </div>
 </div>
 </div>
