--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,7 @@
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
+      <script src="bower_components/jquery-validation/dist/jquery.validate.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
@@ -75,7 +76,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/jobs/jobs.js"></script>
+      <script src="app/jqGrid/jqGrid.directive.js"></script>
       <script src="app/addcompany/addcompany.controller.js"></script>
       <script src="app/addcompany/addcompany.js"></script>
       <script src="app/addjob/addjob.controller.js"></script>
@@ -87,10 +88,12 @@
       <script src="app/companies/companies.controller.js"></script>
       <script src="app/companies/companies.js"></script>
       <script src="app/jobs/jobs.controller.js"></script>
+      <script src="app/jobs/jobs.js"></script>
       <script src="app/account/login/login.controller.js"></script>
-      <script src="app/jqGrid/jqGrid.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/smartValidateForm/smartValidateForm.directive.js"></script>
+      <script src="app/smartWizard/smartWizard.directive.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
